--- a/donate.html
+++ b/donate.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-<html lang="ur">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Donate</title>
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Donate</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<section class="container" style="padding:40px;text-align:center">
-  <h2>JazzCash Donation</h2>
-
-  <img src="images/jazzcash.png" height="40"><br><br>
-  <img src="images/jazzcash-qr.jpg" width="220"><br><br>
-
+<section class="services">
+  <h2>Donate via JazzCash</h2>
+  <img src="images/jazzcash.png" style="height:40px;margin:auto">
+  <br>
+  <img src="images/jazzcash-qr.jpg" style="width:220px;margin:auto">
   <p>
     <b>TILL ID:</b> 982351540<br>
-    <b>Account Title:</b> Data Waly Foundation
+    <b>Account:</b> Data Waly Foundation
   </p>
 
-  <p>
-    <b>Bank:</b> Mobilink Bank<br>
-    <b>IBAN:</b> PK22JCMA1901921017211194
-  </p>
-
-
-  
-  <a href="https://wa.me/923017211194" class="btn green">
-    WhatsApp پر ادائیگی کا ثبوت بھیجیں
+  <a href="https://wa.me/923017211194" class="btn primary">
+    Send Payment Proof on WhatsApp
   </a>
 </section>
 
