--- a/index.html
+++ b/index.html
@@ -1,93 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Data Waly Foundation</title>
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Data Waly Foundation</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header">
-  <div class="container nav">
-    <div class="logo-area">
+<header class="navbar">
+  <div class="nav-inner">
+    <div class="brand">
       <img src="images/logo.png">
       <div>
         <h1>Data Waly Foundation</h1>
-        <span>داتا والے فائونڈیشن</span>
+        <span>داتا والے فاؤنڈیشن</span>
       </div>
     </div>
-
     <nav>
-      <a href="#">Home</a>
       <a href="#services">Services</a>
-      <a href="donate.html" class="btn">Donate</a>
+      <a href="donate.html" class="btn small">Donate</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="overlay"></div>
-  <div class="hero-content container">
-    <h2>غریبوں کی خدمت، عزت کے ساتھ</h2>
-    <p>We help poor families through marriage support, medical care & education.</p>
-    <div class="hero-buttons">
-      <a href="donate.html" class="btn green">Donate Now</a>
-      <a href="https://wa.me/923017211194" class="btn blue">Get Help</a>
+  <div class="hero-box">
+    <h2>Serving Humanity with Dignity & Care</h2>
+    <p>We support poor families through free marriages, medical care & education.</p>
+    <div class="hero-actions">
+      <a href="donate.html" class="btn primary">Donate Now</a>
+      <a href="https://wa.me/923017211194" class="btn ghost">Get Help</a>
     </div>
   </div>
 </section>
 
-<!-- STATS -->
-<section class="stats container">
+<section class="stats">
   <div>👰 <b>500+</b><span>Marriages</span></div>
   <div>🏥 <b>10,000+</b><span>Treatments</span></div>
   <div>📚 <b>3,000+</b><span>Students</span></div>
   <div>🧪 <b>1000+</b><span>Lab Tests</span></div>
 </section>
 
-<!-- SERVICES -->
-<section id="services" class="services container">
-  <h2>ہماری خدمات</h2>
+<section id="services" class="services">
+  <h2>Our Services</h2>
 
-  <div class="service-grid">
+  <div class="card-grid">
     <div class="card">
       <img src="images/marriage.jpg">
-      <h3>غریب بچیوں کی شادی</h3>
-      <p>جہیز، راشن، مالی مدد</p>
+      <h3>Poor Girls Marriage</h3>
+      <p>Dowry & ration support</p>
     </div>
 
     <div class="card">
       <img src="images/medical.jpg">
-      <h3>مفت طبی علاج</h3>
-      <p>ڈاکٹر، ادویات، آپریشن</p>
+      <h3>Free Medical Care</h3>
+      <p>Doctors & medicines</p>
     </div>
 
     <div class="card">
       <img src="images/lab.jpg">
-      <h3>مفت لیبارٹری ٹیسٹ</h3>
-      <p>بلڈ، ECG، ایکسرے</p>
+      <h3>Laboratory Services</h3>
+      <p>Blood, ECG, X-Ray</p>
     </div>
 
     <div class="card">
       <img src="images/education.jpg">
-      <h3>تعلیم</h3>
-      <p>فیس، کتابیں، یونیفارم</p>
+      <h3>Education Support</h3>
+      <p>Fees, books & uniforms</p>
     </div>
   </div>
 </section>
 
-<!-- DONATION STRIP -->
-<section class="donate-strip">
-  <h2>آپ کا عطیہ کسی کی زندگی بدل سکتا ہے</h2>
-  <a href="donate.html" class="btn green">Donate Now</a>
+<section class="cta">
+  <h2>Your donation can change someone’s life</h2>
+  <a href="donate.html" class="btn primary">Donate Now</a>
 </section>
 
-<!-- FOOTER -->
 <footer>
-  <p>© 2026 Data Waly Foundation</p>
+  © 2026 Data Waly Foundation — Non-Profit Organization
 </footer>
 
+<script src="js/script.js"></script>
 </body>
 </html>
