--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Data Waly Foundation</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 <header class="navbar">
   <div class="nav-inner">
     <div class="brand">
-      <img src="images/logo.png">
+      <img src="images/logo.png" alt="Logo">
       <div>
         <h1>Data Waly Foundation</h1>
         <span>داتا والے فاؤنڈیشن</span>
       </div>
     </div>
+
     <nav>
       <a href="#services">Services</a>
       <a href="donate.html" class="btn small">Donate</a>
@@ -61,7 +63,7 @@
     <div class="card">
       <img src="images/lab.jpg">
       <h3>Laboratory Services</h3>
-      <p>Blood, ECG, X-Ray</p>
+      <p>Blood, ECG & X-Ray</p>
     </div>
 
     <div class="card">
