--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 <header class="navbar">
   <div class="nav-inner">
     <div class="brand">
-      <img src="images/logo.png" alt="Logo">
+      <img src="images/logo.png">
       <div>
         <h1>Data Waly Foundation</h1>
         <span>داتا والے فاؤنڈیشن</span>
       </div>
     </div>
-
     <nav>
       <a href="#services">Services</a>
-      <a href="donate.html" class="btn small">Donate</a>
+      <a href="donate.html">Donate</a>
     </nav>
   </div>
 </header>
@@ -30,9 +29,10 @@
   <div class="hero-box">
     <h2>Serving Humanity with Dignity & Care</h2>
     <p>We support poor families through free marriages, medical care & education.</p>
+
     <div class="hero-actions">
       <a href="donate.html" class="btn primary">Donate Now</a>
-      <a href="https://wa.me/923017211194" class="btn ghost">Get Help</a>
+      <a href="https://wa.me/923017211194" class="btn whatsapp">WhatsApp Help</a>
     </div>
   </div>
 </section>
