--- a/index.html
+++ b/index.html
@@ -2,87 +2,110 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Data Waly Foundation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/style.css">
+
+<title>Data Waly Foundation | Non-Profit Organization</title>
+
+<meta name="description" content="Data Waly Foundation provides free marriages, medical care, lab tests and education for poor families in Pakistan.">
+
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header class="navbar">
-  <div class="nav-inner">
-    <div class="brand">
-      <img src="images/logo.png">
-      <div>
-        <h1>Data Waly Foundation</h1>
-        <span>داتا والے فاؤنڈیشن</span>
-      </div>
+  <div class="logo">
+    <img src="logo.png" alt="Data Waly Foundation Logo">
+    <div>
+      <h1>Data Waly Foundation</h1>
+      <span>داتا والی فاؤنڈیشن</span>
     </div>
-    <nav>
-      <a href="#services">Services</a>
-      <a href="donate.html">Donate</a>
-    </nav>
   </div>
+
+  <nav>
+    <a href="#services">Services</a>
+    <a href="donate.html">Donate</a>
+    <button id="langToggle" class="lang-btn">اردو</button>
+  </nav>
 </header>
 
+<!-- HERO -->
 <section class="hero">
   <div class="hero-box">
-    <h2>Serving Humanity with Dignity & Care</h2>
-    <p>We support poor families through free marriages, medical care & education.</p>
+    <h2 data-en="Serving Humanity with Dignity & Care"
+        data-ur="انسانیت کی خدمت عزت اور وقار کے ساتھ">
+      Serving Humanity with Dignity & Care
+    </h2>
 
-    <div class="hero-actions">
-      <a href="donate.html" class="btn primary">Donate Now</a>
-      <a href="https://wa.me/923017211194" class="btn whatsapp">WhatsApp Help</a>
+    <p data-en="We support poor families through free marriages, medical care & education."
+       data-ur="ہم غریب خاندانوں کی مفت شادی، علاج اور تعلیم میں مدد کرتے ہیں">
+      We support poor families through free marriages, medical care & education.
+    </p>
+
+    <div class="hero-buttons">
+      <a href="donate.html" class="btn btn-donate">❤️ Donate Now</a>
+      <a href="https://wa.me/923017211194" class="btn btn-whatsapp">💬 WhatsApp Help</a>
     </div>
   </div>
 </section>
 
+<!-- STATS -->
 <section class="stats">
-  <div>👰 <b>500+</b><span>Marriages</span></div>
-  <div>🏥 <b>10,000+</b><span>Treatments</span></div>
-  <div>📚 <b>3,000+</b><span>Students</span></div>
-  <div>🧪 <b>1000+</b><span>Lab Tests</span></div>
+  <div class="stat-card glow pink">👰 <b>500+</b><span>Marriages</span></div>
+  <div class="stat-card glow blue">🏥 <b>10,000+</b><span>Treatments</span></div>
+  <div class="stat-card glow purple">📚 <b>3,000+</b><span>Students</span></div>
+  <div class="stat-card glow green">🧪 <b>1000+</b><span>Lab Tests</span></div>
 </section>
 
+<!-- SERVICES -->
 <section id="services" class="services">
   <h2>Our Services</h2>
 
-  <div class="card-grid">
+  <div class="service-grid">
+
     <div class="card">
-      <img src="images/marriage.jpg">
+      <img src="images/marriage.jpg" alt="Poor Girls Marriage Support">
       <h3>Poor Girls Marriage</h3>
       <p>Dowry & ration support</p>
     </div>
 
     <div class="card">
-      <img src="images/medical.jpg">
+      <img src="images/medical.jpg" alt="Free Medical Care">
       <h3>Free Medical Care</h3>
       <p>Doctors & medicines</p>
     </div>
 
     <div class="card">
-      <img src="images/lab.jpg">
+      <img src="images/lab.jpg" alt="Laboratory Services">
       <h3>Laboratory Services</h3>
       <p>Blood, ECG & X-Ray</p>
     </div>
 
     <div class="card">
-      <img src="images/education.jpg">
+      <img src="images/education.jpg" alt="Education Support">
       <h3>Education Support</h3>
       <p>Fees, books & uniforms</p>
     </div>
+
   </div>
 </section>
 
-<section class="cta">
+<!-- CTA -->
+<section class="donation-cta">
   <h2>Your donation can change someone’s life</h2>
-  <a href="donate.html" class="btn primary">Donate Now</a>
+  <a href="donate.html" class="btn btn-donate big">❤️ Donate Now</a>
 </section>
 
-<footer>
-  © 2026 Data Waly Foundation — Non-Profit Organization
+<footer class="footer">
+  <div class="socials">
+    <a href="#">📘</a>
+    <a href="https://wa.me/923017211194">💬</a>
+    <a href="#">📞</a>
+    <a href="#">📍</a>
+  </div>
+  <p>© 2026 Data Waly Foundation — Non-Profit Organization</p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
