--- a/index.html
+++ b/index.html
@@ -3,107 +3,93 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Data Waly Foundation | Non-Profit Organization</title>
-
-<meta name="description" content="Data Waly Foundation provides free marriages, medical care, lab tests and education for poor families in Pakistan.">
+<title>Data Waly Foundation</title>
 
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
 
-<header class="navbar">
-  <div class="logo">
-    <img src="logo.png" alt="Data Waly Foundation Logo">
+<header class="navbar glass">
+  <div class="brand">
+    <img src="logo.png">
     <div>
       <h1>Data Waly Foundation</h1>
       <span>داتا والی فاؤنڈیشن</span>
     </div>
   </div>
-
   <nav>
     <a href="#services">Services</a>
-    <a href="donate.html">Donate</a>
-    <button id="langToggle" class="lang-btn">اردو</button>
+    <a href="donate.html" class="nav-donate">Donate</a>
   </nav>
 </header>
 
 <!-- HERO -->
-<section class="hero">
-  <div class="hero-box">
-    <h2 data-en="Serving Humanity with Dignity & Care"
-        data-ur="انسانیت کی خدمت عزت اور وقار کے ساتھ">
-      Serving Humanity with Dignity & Care
-    </h2>
+<section class="hero parallax">
+  <div class="hero-box glass reveal">
+    <h2>Serving Humanity with Dignity & Care</h2>
+    <p>Free marriages, medical care, lab services & education for poor families.</p>
 
-    <p data-en="We support poor families through free marriages, medical care & education."
-       data-ur="ہم غریب خاندانوں کی مفت شادی، علاج اور تعلیم میں مدد کرتے ہیں">
-      We support poor families through free marriages, medical care & education.
-    </p>
-
-    <div class="hero-buttons">
-      <a href="donate.html" class="btn btn-donate">❤️ Donate Now</a>
-      <a href="https://wa.me/923017211194" class="btn btn-whatsapp">💬 WhatsApp Help</a>
+    <div class="hero-actions">
+      <a href="donate.html" class="btn neon-red pulse">❤️ Donate Now</a>
+      <a href="https://wa.me/923017211194" class="btn neon-green">💬 WhatsApp Help</a>
     </div>
   </div>
 </section>
 
 <!-- STATS -->
 <section class="stats">
-  <div class="stat-card glow pink">👰 <b>500+</b><span>Marriages</span></div>
-  <div class="stat-card glow blue">🏥 <b>10,000+</b><span>Treatments</span></div>
-  <div class="stat-card glow purple">📚 <b>3,000+</b><span>Students</span></div>
-  <div class="stat-card glow green">🧪 <b>1000+</b><span>Lab Tests</span></div>
+  <div class="stat neon-pink reveal">👰 <b>500+</b><span>Marriages</span></div>
+  <div class="stat neon-blue reveal">🏥 <b>10,000+</b><span>Treatments</span></div>
+  <div class="stat neon-purple reveal">📚 <b>3,000+</b><span>Students</span></div>
+  <div class="stat neon-green reveal">🧪 <b>1000+</b><span>Lab Tests</span></div>
 </section>
 
 <!-- SERVICES -->
 <section id="services" class="services">
-  <h2>Our Services</h2>
+<h2 class="reveal">Our Services</h2>
 
-  <div class="service-grid">
-
-    <div class="card">
-      <img src="images/marriage.jpg" alt="Poor Girls Marriage Support">
-      <h3>Poor Girls Marriage</h3>
-      <p>Dowry & ration support</p>
-    </div>
-
-    <div class="card">
-      <img src="images/medical.jpg" alt="Free Medical Care">
-      <h3>Free Medical Care</h3>
-      <p>Doctors & medicines</p>
-    </div>
-
-    <div class="card">
-      <img src="images/lab.jpg" alt="Laboratory Services">
-      <h3>Laboratory Services</h3>
-      <p>Blood, ECG & X-Ray</p>
-    </div>
-
-    <div class="card">
-      <img src="images/education.jpg" alt="Education Support">
-      <h3>Education Support</h3>
-      <p>Fees, books & uniforms</p>
-    </div>
-
+<div class="service-grid">
+  <div class="service-card reveal">
+    <img src="images/marriage.jpg">
+    <h3>Poor Girls Marriage</h3>
+    <p>Dowry & ration support</p>
   </div>
+
+  <div class="service-card reveal">
+    <img src="images/medical.jpg">
+    <h3>Free Medical Care</h3>
+    <p>Doctors & medicines</p>
+  </div>
+
+  <div class="service-card reveal">
+    <img src="images/lab.jpg">
+    <h3>Laboratory Services</h3>
+    <p>Blood, ECG & X-Ray</p>
+  </div>
+
+  <div class="service-card reveal">
+    <img src="images/education.jpg">
+    <h3>Education Support</h3>
+    <p>Fees, books & uniforms</p>
+  </div>
+</div>
 </section>
 
 <!-- CTA -->
-<section class="donation-cta">
-  <h2>Your donation can change someone’s life</h2>
-  <a href="donate.html" class="btn btn-donate big">❤️ Donate Now</a>
+<section class="cta">
+  <h2 class="reveal">Your donation can change someone’s life</h2>
+  <a href="donate.html" class="btn neon-red big pulse">❤️ Donate Now</a>
 </section>
 
-<footer class="footer">
+<footer>
   <div class="socials">
-    <a href="#">📘</a>
+    <a>📘</a>
     <a href="https://wa.me/923017211194">💬</a>
-    <a href="#">📞</a>
-    <a href="#">📍</a>
+    <a>📞</a>
+    <a>📍</a>
   </div>
-  <p>© 2026 Data Waly Foundation — Non-Profit Organization</p>
+  <p>© 2026 Data Waly Foundation</p>
 </footer>
 
 <script src="script.js"></script>
