--- a/donate.html
+++ b/donate.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Donate | Data Waly Foundation</title>
+<title>Donate</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<header class="navbar">
-  <div class="logo">
-    <img src="logo.png">
-    <h1>Data Waly Foundation</h1>
+<section class="donate-hero">
+  <div class="glass donate-box reveal">
+
+    <h2>❤️ Support Humanity</h2>
+    <p>Your donation saves lives</p>
+
+    <div class="pay-card glow-yellow">
+      <h3>JazzCash</h3>
+      <img src="images/jazzcash-qr.jpg">
+      <p><b>TILL ID:</b> 982351540</p>
+    </div>
+
+    <div class="pay-card glow-blue">
+      <h3>Bank Transfer</h3>
+      <p><b>IBAN:</b> PK22JCMA1901921017211194</p>
+      <p><b>Account:</b> Data Waly Foundation</p>
+    </div>
+
+    <a href="https://wa.me/923017211194" class="btn neon-green big pulse">
+      💬 Send Proof on WhatsApp
+    </a>
+
   </div>
-</header>
-
-<section class="donate-page">
-  <h2>Donate via JazzCash</h2>
-
-  <img src="jazzcash-qr.jpg" class="qr">
-
-  <p><b>TILL ID:</b> 982351540</p>
-  <p><b>Account Title:</b> Data Waly Foundation</p>
-
-  <a href="https://wa.me/923017211194" class="btn btn-whatsapp">
-    💬 Send Payment Proof on WhatsApp
-  </a>
 </section>
 
 </body>
