--- a/donate.html
+++ b/donate.html
@@ -2,31 +2,37 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Donate</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Donate | Data Waly Foundation</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<header class="navbar">
-  <div class="logo">
-    <img src="logo.png">
-    <h1>Data Waly Foundation</h1>
-  </div>
-</header>
+<section style="
+min-height:100vh;display:flex;align-items:center;justify-content:center;
+padding:40px 15px;
+">
 
-<section class="donate-page">
-  <h2>Donate via JazzCash</h2>
+<div style="
+background:#fff;max-width:420px;width:100%;
+padding:30px 20px;border-radius:20px;
+text-align:center;box-shadow:0 20px 40px rgba(0,0,0,.15);
+">
 
-  <img src="jazzcash-qr.jpg" class="qr">
+<h2>Donate via JazzCash</h2>
 
-  <p><b>TILL ID :</b> 982351540</p>
-  <p><b>Account Title :</b> Data Waly Foundation</p>
+<img src="images/jazzcash-qr.jpg" style="max-width:260px;margin:20px auto">
 
-  <a href="https://wa.me/923017211194" class="btn btn-whatsapp">
-    💬 Send Payment Proof on WhatsApp
-  </a>
+<p><b>TILL ID:</b> 982351540</p>
+<p><b>Account:</b> Data Waly Foundation</p>
+
+<a href="https://wa.me/923017211194"
+class="btn whatsapp" style="display:block;margin-top:20px">
+Send Payment Proof on WhatsApp
+</a>
+
+</div>
 </section>
 
 </body>
