--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </section>
 
 <section class="stats">
-  <div>👰 <b>500+</b><span>Marriages</span></div>
-  <div>🏥 <b>10,000+</b><span>Treatments</span></div>
-  <div>📚 <b>3,000+</b><span>Students</span></div>
-  <div>🧪 <b>1000+</b><span>Lab Tests</span></div>
+  <div>👰 <b>5</b><span>Marriages</span></div>
+  <div>🏥 <b>18</b><span>Treatments</span></div>
+  <div>📚 <b>50</b><span>Students</span></div>
+  <div>🧪 <b>100</b><span>Lab Tests</span></div>
 </section>
 
 <section id="services" class="services">
