--- a/donate.html
+++ b/donate.html
@@ -1,49 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Donate Now</title>
-<link rel="stylesheet" href="donate.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-</head>
-<body>
+<section class="donation-section">
+  <h2>Support Our Cause</h2>
+  <p class="subtitle">Choose a secure donation method</p>
 
-<section class="donate-box">
-  <h1>Support Our Cause ❤️</h1>
-  <p>Select a donation method</p>
-
-  <div class="donate-options">
+  <div class="donation-cards">
     <!-- JazzCash -->
-    <a href="jazzcash.html" class="donate-card jazz">
-      💳
-      <h3>Donate via JazzCash</h3>
-      <span>Instant Mobile Payment</span>
-    </a>
+    <div class="donation-card" onclick="showJazz()">
+      <img src="jazzcash.png" alt="JazzCash">
+      <span>Donate via JazzCash</span>
+    </div>
 
-    <!-- IBAN -->
-    <div class="donate-card iban" onclick="showIBAN()">
-      🏦
-      <h3>Donate via IBAN</h3>
-      <span>Bank Transfer</span>
+    <!-- Bank -->
+    <div class="donation-card" onclick="showBank()">
+      <img src="bank.png" alt="Bank">
+      <span>Donate via Bank</span>
     </div>
   </div>
 
-  <!-- IBAN DETAILS -->
-  <div id="ibanDetails" class="iban-details">
-    <img src="bank.png" alt="Bank Logo">
+  <!-- JazzCash Details -->
+  <div id="jazz" class="details-box">
+    <img src="jazzcash.png">
     <p><strong>Account Title:</strong> Data Waly Foundation</p>
-    <p><strong>IBAN:</strong> PK22JCMA1901921017211194</p>
+    <p><strong>Till ID:</strong> 982 351 540 </p>
+    <p><strong>Scan & Pay Available</strong></p>
+  </div>
+
+  <!-- Bank Details -->
+  <div id="bank" class="details-box">
+    <img src="bank.png">
+    <p><strong>Account Title:</strong> Data Waly Foundation</p>
+    <p><strong>IBAN:</strong> PK22JCMA190192101721194</p>
     <p><strong>Bank:</strong> Mobilink (JazzCash Bank)</p>
   </div>
 </section>
-
-<script>
-function showIBAN() {
-  document.getElementById("ibanDetails").style.display = "block";
-  window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
-}
-</script>
-
-</body>
-</html>
