--- a/donate.html
+++ b/donate.html
@@ -1,34 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Donate</title>
+  <link rel="stylesheet" href="donate.css">
+</head>
+<body>
+
 <section class="donation-section">
   <h2>Support Our Cause</h2>
   <p class="subtitle">Choose a secure donation method</p>
 
   <div class="donation-cards">
-    <!-- JazzCash -->
-    <div class="donation-card" onclick="showJazz()">
-      <img src="jazzcash.png" alt="JazzCash">
-      <span>Donate via JazzCash</span>
+    <div class="donation-card glow-green" onclick="showJazz()">
+      <img src="images/jazzcash.png">
+      <h3>Donate via JazzCash</h3>
+      <span>Instant Mobile Payment</span>
     </div>
 
-    <!-- Bank -->
-    <div class="donation-card" onclick="showBank()">
-      <img src="bank.png" alt="Bank">
-      <span>Donate via Bank</span>
+    <div class="donation-card glow-blue" onclick="showBank()">
+      <img src="images/bank.png">
+      <h3>Donate via Bank</h3>
+      <span>IBAN Transfer</span>
     </div>
   </div>
 
   <!-- JazzCash Details -->
-  <div id="jazz" class="details-box">
-    <img src="jazzcash.png">
-    <p><strong>Account Title:</strong> Data Waly Foundation</p>
-    <p><strong>Till ID:</strong> 982 351 540 </p>
-    <p><strong>Scan & Pay Available</strong></p>
+  <div id="jazzBox" class="details-box">
+    <img src="images/jazzcash.png">
+    <p><b>Account Title:</b> Data Waly Foundation</p>
+    <p><b>Mobile:</b> 03XXXXXXXXX</p>
+    <button onclick="openQR()">Show QR Code</button>
   </div>
 
   <!-- Bank Details -->
-  <div id="bank" class="details-box">
-    <img src="bank.png">
-    <p><strong>Account Title:</strong> Data Waly Foundation</p>
-    <p><strong>IBAN:</strong> PK22JCMA190192101721194</p>
-    <p><strong>Bank:</strong> Mobilink (JazzCash Bank)</p>
+  <div id="bankBox" class="details-box">
+    <img src="images/bank.png">
+    <p><b>Account Title:</b> Data Waly Foundation</p>
+    <p><b>IBAN:</b> PK22JCMA190192101721194</p>
+    <p><b>Bank:</b> Mobilink (JazzCash Bank)</p>
+    <button onclick="copyIBAN()">Copy IBAN</button>
   </div>
 </section>
+
+<!-- QR MODAL -->
+<div id="qrModal" class="modal">
+  <div class="modal-content">
+    <span onclick="closeQR()">×</span>
+    <h3>Scan to Donate</h3>
+    <img src="images/jazz-qr.png">
+  </div>
+</div>
+
+<script>
+function showJazz(){
+  jazzBox.style.display="block";
+  bankBox.style.display="none";
+}
+function showBank(){
+  bankBox.style.display="block";
+  jazzBox.style.display="none";
+}
+function openQR(){
+  qrModal.style.display="flex";
+}
+function closeQR(){
+  qrModal.style.display="none";
+}
+function copyIBAN(){
+  navigator.clipboard.writeText("PK22JCMA190192101721194");
+  alert("IBAN copied");
+}
+</script>
+
+</body>
+</html>
